--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:padding="5dp"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -16,5 +16,11 @@
         app:layoutManager="LinearLayoutManager"
         tools:layout_editor_absoluteX="26dp"
         tools:layout_editor_absoluteY="0dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add Student"
+        android:id="@+id/btnAddStudent"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
